// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[item=duralumin] Duralumin Provide 1`] = `
Set {
  "duralumin",
}
`;

exports[`Auog Bonemeal Provide 1`] = `
Set {
  "bonemeal",
}
`;

exports[`Chemical Science Pack Provide (from science!) 1`] = `
Set {
  "chemical-science-pack",
}
`;

exports[`Incubated Petri Dish Provide 1`] = `
Set {
  "petri-dish-bacteria",
}
`;

exports[`Iron Ore Provide 1`] = `
Set {
  "iron-ore",
}
`;

exports[`Laboratory Instruments Provide 1`] = `
Set {
  "lab-instrument",
}
`;

exports[`Useless Provide 1`] = `Set {}`;
